--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: The Kendric Blog
-email: ngkendric@gmail.com
+title: [inset blog title]
+email: [insert contact email]
 
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
@@ -8,18 +8,18 @@ description: >- # this means to ignore newlines until "baseurl:"
 
 baseurl: "" # the subpath of your site, e.g. /blog
 
-url: https://www.kendric.blog
-twitter_username: kendricng
-github_username:  kenterminator
+url: [insert url here]
+twitter_username: [insert username]
+github_username:  [insert username]
 
 font-url: 'https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600,700'
 
 # Build settings
 markdown: kramdown
-timezone: Asia/Hong_Kong
+timezone: [insert timezone here with Region/Country template] #insert template link
 exclude: ['Gemfile', 'Gemfile.lock', '*.sublime-*', 'lib', 'vendor', 'Rakefile', 's3_website.yml']
 relative_permalinks: false
-author: Kendric Ng
+author: [insert name here]
 plugins:
   - jekyll-feed
 sass:
